jay-nginxdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jay-nginxdeployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jay-nginx
  template:
    metadata:
      labels:
        app: jay-nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
