jay-nginxservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: jay-service
spec:
  type: ClusterIP
  selector:
    app: jay-nginx
  ports:
  - port: 80
    targetPort: 80
