jay-nginxingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jay-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jay-service
            port:
              number: 80
